gccida/g2/check_insn_for_givs
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5780:1: error: use of undeclared identifier 'induction_1'
induction_1 *v24; // r15 
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5780:14: error: use of undeclared identifier 'v24'
induction_1 *v24; // r15 
             ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5782:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5782:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5785:4: error: expected ';' after expression
rtx src_reg; // [rsp+18h] [rbp-60h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5785:5: error: use of undeclared identifier 'src_reg'
rtx src_reg; // [rsp+18h] [rbp-60h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5786:4: error: expected ';' after expression
rtx add_val; // [rsp+20h] [rbp-58h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5786:5: error: use of undeclared identifier 'add_val'
rtx add_val; // [rsp+20h] [rbp-58h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5787:4: error: expected ';' after expression
rtx mult_val; // [rsp+28h] [rbp-50h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5787:5: error: use of undeclared identifier 'mult_val'
rtx mult_val; // [rsp+28h] [rbp-50h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5788:4: error: expected ';' after expression
rtx ext_val; // [rsp+30h] [rbp-48h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5788:5: error: use of undeclared identifier 'ext_val'
rtx ext_val; // [rsp+30h] [rbp-48h] BYREF 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5789:4: error: expected ';' after expression
rtx last_consec_insn[8]; // [rsp+38h] [rbp-40h] BYREF 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5789:5: error: use of undeclared identifier 'last_consec_insn'; did you mean 'skip_consec_insns'?
rtx last_consec_insn[8]; // [rsp+38h] [rbp-40h] BYREF 
    ^~~~~~~~~~~~~~~~
    skip_consec_insns
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:1339:1: note: 'skip_consec_insns' declared here
skip_consec_insns (insn, count)
^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5789:5: error: subscript of pointer to function type 'rtx ()' (aka 'struct rtx_def *()')
rtx last_consec_insn[8]; // [rsp+38h] [rbp-40h] BYREF 
    ^~~~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5797:13: error: expected ';' after expression
v19 = ( rtx)p[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5820:43: error: expected expression
if ( general_induction_var( loop, *( rtx *)&v19[1], &src_reg, &add_val, &mult_val, &ext_val, 0, &benefit, VOIDmode) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5820:54: error: use of undeclared identifier 'src_reg'
if ( general_induction_var( loop, *( rtx *)&v19[1], &src_reg, &add_val, &mult_val, &ext_val, 0, &benefit, VOIDmode) 
                                                     ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/loop.c:5820:64: error: use of undeclared identifier 'add_val'
if ( general_induction_var( loop, *( rtx *)&v19[1], &src_reg, &add_val, &mult_val, &ext_val, 0, &benefit, VOIDmode) 
                                                               ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/check_insn_for_givs/src/obj/loop.o] Error 1
